--- a/app/src/main/res/layout/activity_edit_task.xml
+++ b/app/src/main/res/layout/activity_edit_task.xml
@@ -66,7 +66,9 @@
                 android:background="@drawable/bginputtask"
                 android:hint="What will you do?"
                 android:inputType="text"
-                android:paddingLeft="12dp" />
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:importantForAutofill="no" />
 
         </LinearLayout>
 
@@ -94,7 +96,9 @@
                 android:background="@drawable/bginputtask"
                 android:hint="How do you do that?"
                 android:inputType="text"
-                android:paddingLeft="12dp" />
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:importantForAutofill="no"/>
         </LinearLayout>
 
         <LinearLayout
@@ -121,7 +125,9 @@
                 android:background="@drawable/bginputtask"
                 android:hint="When will you finish it?"
                 android:inputType="datetime"
-                android:paddingLeft="12dp" />
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:importantForAutofill="no" />
 
         </LinearLayout>
 
